Consider floats as HitTest candidate for selection

Selection with floats has a weird and unpredictable behavior. The root
cause is that floats are not considered valid HitTest candidates.

There are many other cases where float elements are ignored when
traversing the tree looking for the closes element to a specific
LayoutPoint.

This patch address just one of this cases, where floats are children
of a in-flow block-level box.

Bug: 758526
Change-Id: I918af3ee21aa1070fa03a9fe1073205cc0a57300